# hyper-wrapped

./: .gitignore  README.md
backend/: main.py  makefile  pyproject.toml  requirements.txt
backend/controllers/: category_controller.py  transaction_controller.py  trend_controller.py  user_controller.py
backend/database/: __init__.py  db.py
backend/models/: category.py  transaction.py  user.py
backend/routes/: trend.py  user.py
backend/schemas/: category.py  transaction.py  trend.py  user.py
database_dummy/: categories.csv  credits.txt  users.csv
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js  store.js
frontend/src/api/: config.js  getBiggestSpending.js  getDailyAverageOverview.js  getMonthlyOverview.js  getMostExpensiveCategories.js  getMostFrequentCategories.js  loginWithUsername.js
frontend/src/components/: Logo.js
frontend/src/components/Animations/: FadeIn.js  FadeInAndOut.js  FadeOut.js  Reveal.js  Slide.js  SwipeUp.js
frontend/src/components/CategoryCard/: CategoryCard.js  style.css
frontend/src/components/Data/: BarChart.js  HorizontalBarChart.js
frontend/src/components/Logo/: Logo.js  style.css
frontend/src/components/Pagination/: Pagination.js  style.css
frontend/src/fonts/: credits.txt
frontend/src/pages/: HomePage.js  LoginPage.js  WrappedPage.js
frontend/src/pages/home/: HomePage.js  style.css
frontend/src/pages/login/: LoginPage.js  style.css
frontend/src/styles/: fonts.css  general.css  themes.css
frontend/src/utils/: date.js  window.js
(+9 files in other folders)
