[tool.poetry]
name = "hyper-wrapped-back"
version = "0.1.0"
description = "Hyper-wrapped backend application"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
SQLAlchemy = "^2.0.21"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
